# todoist-tui

./: .gitignore  pyproject.toml
todoist_tui/: api.py  app.py  app.tcss  assistant.py  main.py  models.py
todoist_tui/screens/: add_task.py  assignee_screen.py  due_date_screen.py  priority_screen.py
todoist_tui/widgets/: chat_pane.py  project_sidebar.py  task_list.py  undo_bar.py
